# company_challenge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHALLENGE.md  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
companies/: factories.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_initial.py
companies/tests/: conftest.py  endpoints.py  serializers.py  services.py  validators.py
configurations/: env_template
core/: celery.py  fields.py  openapi.py  settings.py  urls.py  validators.py  views.py
users/: factories.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: companies.py  conftest.py  login.py  logout.py  register.py
