[tool.poetry]
name = "company_challenge"
version = "0.0.1"
description = "My proposed solution to a company challenge."
authors = ["Felipe <feslima93@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest = "^7.0.0"
black = "^22.1.0"
isort = "^5.10.1"
autoflake = "^1.4"
mypy = "^0.931"
Faker = "^12.3.0"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
